# my-megi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MVP.md  README.md  TODO.md  docker-compose.yml  package.json  pyproject.toml
backend/mymegi/: __init__.py  config.py  db.py  llm.py  main.py  ocr.py
backend/mymegi/web/: help.html  index.html
backend/mymegi/web/static/: app.js  help.css  styles.css
cli/mymegi_cli/: __init__.py  main.py
docs/: API_CLI.md  AUTH_RBAC.md  BACKUP_RESTORE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md
migrations/: 001_init.sql  002_add_english_fields.sql  003_add_dual_side_cards.sql  004_one_card_one_contact.sql  005_auth_rbac.sql  006_api_access_tokens.sql  007_drop_logo_records.sql
tests/: test_smoke.py
