[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-megi"
version = "0.1.12"
description = "Local-first business card and relationship manager."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "asyncpg>=0.29.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "Pillow>=11.0.0",
  "pillow-heif>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
mymegi = "mymegi_cli.main:app"

[tool.setuptools.packages.find]
where = ["backend", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
